# reservoir-frontier

./: .gitignore  README.md  Reservoir.py  base_linop.py  box_dimension.py  chaotic_edge_fractals-2.ipynb  compute_frontier.ipynb  compute_frontier.py  compute_frontier_new.py  compute_lines.py  fractal_analysis.ipynb  fractal_analysis.py  fractal_analysis_old.py  linop.py  network.py  plot_frontier.py  plot_image.py  plot_lines.ipynb  plotting.py  pyproject.toml  reservoir.py  test.ipynb  test.py  tmp  utils.py  utils_fractals.py
250130stability_frontier_data/: 250130res[1.62, 1.92]_input[1, 1.3]_HR.npy  250130res[1.73, 1.83]_input[1.1, 1.2]_HR.npy  250130res[1.777, 1.802]_input[1.137, 1.162]_HR.npy  250130res[1.785, 1.795]_input[1.145, 1.155]_HR.npy
scripts/: compute_frontier.py  compute_gradient_divergence.py
src/: fractal.py  linop.py  network.py  propagation.py  utils.py
