[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reservoir-frontier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "porespy>=2.4.3",
    "pyafbf>=0.2.4",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
